name:                   hw-ip
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/hw-ip#readme
license:                BSD3
license-file:           LICENSE
author:                 John
maintainer:             newhoggy@gmail.com
copyright:              2017 John Ky
category:               Network
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Network.Ip
  build-depends:        base >= 4.7 && < 5
  default-language:     Haskell2010

test-suite hw-ip-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Network.IpSpec
  build-depends:        base
                      , hedgehog
                      , hw-hspec-hedgehog
                      , hw-ip
                      , hspec
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw-ip
